--- a/manager/media/style/SoftSlate/style.css
+++ b/manager/media/style/SoftSlate/style.css
@@ -429,7 +429,9 @@ form input[type=text] {
 
 form input[type=text],
 form input[type=password],
-form textarea {
+form textarea,
+form#mutate input,
+form#mutate textarea {
     background: var(--color-surface);
     border-color: #999 #DDD #DDD #999;
     border-style: solid;
