--- a/manager/media/style/ZenWhite/style.css
+++ b/manager/media/style/ZenWhite/style.css
@@ -190,11 +190,8 @@ h1, h2, h3, h4, h5, h6, p, pre, blockquote, ul, ol, dl, address {
 }
 
 li, dd, blockquote {
-    margin: 0 0 0 1em;
-}
-
-.rtl li, .rtl dd, .rtl blockquote {
-    margin: 0 1em 0 0;
+    margin-block: 0;
+    margin-inline: 0 0 0 1em;
 }
 
 
@@ -247,10 +244,6 @@ h1.draft {
     background-color: var(--color-draft-bg);
 }
 
-.rtl h1 {
-    margin-right: var(--space-md);
-}
-
 h2 {
     font-size: 1.64em;
 }
@@ -274,12 +267,9 @@ p.caption, p.comment {
 button {
     width: 112px;
     font: inherit;
-    margin: 0 5px 0 0;
+    margin-block: 0;
+    margin-inline-end: 5px;
     cursor: pointer;
-}
-
-.rtl button {
-    margin: 0 0 0 5px;
 }
 
 a, a:active, a:visited, a:link {
@@ -318,19 +308,17 @@ hr {
 .right {
     font-weight: bold;
     color: var(--color-text-primary);
-    float: left;
-    padding: 0 20px 20px;
-}
-
-.rtl .right {
-    float: right;
+    float: inline-start;
+    padding-block: 0 20px;
+    padding-inline-end: 20px;
 }
 
 /* -------------------------[ Topbar ]--- */
 #topbar {
     margin: 0;
     color: var(--color-text-primary);
-    padding: 0 5px;
+    padding-block: 0;
+    padding-inline: 5px;
     position: relative;
 }
 
@@ -354,14 +342,11 @@ hr {
     position: absolute;
     top: 37px;
     z-index: 1000;
-}
-
-.rtl #tocText {
-    right: 3px;
+    inset-inline-start: 0;
 }
 
 .tocTextRTL {
-    right: 3px;
+    inset-inline-end: 3px;
 }
 
 #tocText,
@@ -381,13 +366,9 @@ hr {
 
 #statusbar {
     position: absolute;
-    right: 0;
+    inset-inline-end: 0;
     top: 36px;
     z-index: 1000;
-}
-
-.rtl #statusbar {
-    left: 0;
 }
 
 #supplementalNav {
@@ -402,17 +383,16 @@ hr {
     height: var(--topnav-item-height);
     line-height: var(--topnav-item-height);
     margin: 3px 0 0 0;
-    padding: 0 18px;
+    padding-block: 0;
+    padding-inline: 18px;
     position: absolute;
-    right: var(--subnav-horizontal-padding);
+    inset-inline-end: var(--subnav-horizontal-padding);
     top: 6px;
     z-index: 111;
 }
 
 .rtl #supplementalNav {
     flex-direction: row-reverse;
-    left: var(--subnav-horizontal-padding);
-    right: auto;
 }
 
 #supplementalNav a {
@@ -437,16 +417,14 @@ hr {
 }
 
 #supplementalNav .supplementalNav__item + .supplementalNav__item {
-    padding-left: var(--topnav-gap);
+    padding-inline-start: var(--topnav-gap);
 }
 
 .rtl #supplementalNav .supplementalNav__item + .supplementalNav__item {
-    border-left: none;
-    border-right: 1px solid rgba(255, 255, 255, .2);
-    margin-left: 0;
-    margin-right: var(--topnav-gap);
-    padding-left: 0;
-    padding-right: var(--topnav-gap);
+    border-inline-start: none;
+    border-inline-end: 1px solid rgba(255, 255, 255, .2);
+    margin-inline: 0 var(--topnav-gap);
+    padding-inline: 0 var(--topnav-gap);
 }
 
 #supplementalNav .supplementalNav__item--messages {
@@ -467,12 +445,7 @@ hr {
 }
 
 #supplementalNav #msgCounter {
-    margin-left: 4px;
-}
-
-.rtl #supplementalNav #msgCounter {
-    margin-left: 0;
-    margin-right: 4px;
+    margin-inline-start: 4px;
 }
 
 #supplementalNav .supplementalNav__version-label {
@@ -502,13 +475,6 @@ fieldset {
 input, select, textarea, option, optgroup, td {
     font: inherit;
     color: inherit;
-}
-
-.rtl input,
-.rtl select,
-.rtl textarea,
-.rtl td {
-    text-align: right;
 }
 
 textarea[readonly],
@@ -559,17 +525,14 @@ form textarea {
     border-color: var(--color-border-dark) var(--color-border-light) var(--color-border-light) var(--color-border-dark);
     border-style: solid;
     border-width: 1px;
-    padding: var(--space-xs) 2px var(--space-xs) var(--space-xs);
-    margin: 0 2px 0 0;
+    padding: var(--space-xs) 2px;
+    padding-inline-start: var(--space-xs);
+    margin-block: 0;
+    margin-inline-end: 2px;
     min-height: 17px;
     vertical-align: baseline;
     border-radius: var(--radius-sm);
     box-shadow: 0px 1px 3px var(--light-bg-secondary) inset;
-}
-
-.rtl form input[type=text],
-.rtl form textarea {
-    padding: 2px 2px 2px 0;
 }
 
 .sectionBody input.inputBox[type=text],
@@ -594,7 +557,8 @@ input:is([type="button"], [type="submit"]) {
     border: 1px solid var(--color-neutral-button-border);
     cursor: pointer;
     line-height: normal;
-    margin: -1px 0 0 5px;
+    margin: -1px 0 0;
+    margin-inline-start: 5px;
     min-height: 27px;
     padding: 4px 10px;
     overflow: visible;
@@ -648,25 +612,14 @@ form input.hidden {
 .form input,
 .form textarea {
     display: block;
-    float: left;
+    float: inline-start;
     vertical-align: middle;
 }
 
 .form label {
-    padding-right: 20px;
-    text-align: right;
+    padding-inline-end: 20px;
+    text-align: end;
     width: 110px;
-}
-
-.rtl .form label,
-.rtl .form input,
-.rtl .form textarea {
-    float: right;
-}
-
-.rtl .form label {
-    padding-left: 20px;
-    text-align: left;
 }
 
 form textarea {
@@ -684,11 +637,7 @@ form textarea {
 
 .form select {
     display: inline;
-    float: left;
-}
-
-.rtl .form select {
-    float: right;
+    float: inline-start;
 }
 
 .form br {
@@ -698,21 +647,13 @@ form textarea {
 input.submit {
     display: block !important;
     float: none !important;
-    margin: 20px 0 0 140px !important;
-}
-
-.rtl input.submit {
-    margin: 20px 140px 0 0 !important;
+    margin-block: 20px 0;
+    margin-inline-start: 140px !important;
 }
 
 .form fieldset.list {
-    margin: 6px 6px 3px 0;
-}
-
-.rtl .form fieldset.list {
-    border: 0;
-    padding: 0 !important;
-    margin: 6px 0 3px 6px;
+    margin: 6px 6px 3px;
+    margin-inline-start: 0;
 }
 
 .form fieldset.list legend {
@@ -723,7 +664,7 @@ input.submit {
 .form fieldset.list input {
     padding: 0;
     margin: 0 0 3px;
-    float: left;
+    float: inline-start;
     display: inline;
     border: 0;
     background: none;
@@ -731,14 +672,9 @@ input.submit {
     height: auto;
 }
 
-.rtl .form fieldset.list label,
-.rtl .form fieldset.list input {
-    float: right;
-}
-
 .form fieldset.list label {
-    padding-left: 5px;
-    text-align: left;
+    padding-inline-start: 5px;
+    text-align: start;
     width: auto;
 }
 
@@ -785,7 +721,6 @@ form .imeoff {
 
 .rtl .sectionHeader {
     direction: rtl;
-    padding: 5px 18px 5px 3px;
 }
 
 .sectionBody {
@@ -798,7 +733,8 @@ form .imeoff {
 .section .sectionBody {
     background: none repeat scroll 0 0 var(--light-bg-primary);
     border: 1px solid var(--color-border-default);
-    margin: 0 3px 15px;
+    margin-block: 0 15px;
+    margin-inline: 3px;
     padding: 15px;
 }
 
@@ -834,11 +770,8 @@ li {
 }
 
 ul {
-    margin: 0 20px 0 20px;
-}
-
-.rtl ul {
-    margin: 0 10px 0 20px;
+    margin-block: 0;
+    margin-inline: 20px;
 }
 
 .screen {
@@ -870,12 +803,8 @@ a img {
 
 .editorCell {
     border-top: 1px solid #808080;
-    text-align: left;
+    text-align: start;
     vertical-align: baseline;
-}
-
-.rtl .editorCell {
-    text-align: right;
 }
 
 .row1, .row2, .row3 {
@@ -902,25 +831,19 @@ a img {
     cursor: default;
     height: 100%;
     padding: 6px 8px 0;
+    padding-inline-start: 12px;
     line-height: 1.3em;
     font-family: Arial, "Helvetica Neue", Helvetica, Meiryo, "Hiragino Kaku Gothic Pro", sans-serif;
 }
 
-#treeHolder {
-    padding-left: 12px;
-}
-
 #treeRoot {
-    margin-left: -10px;
+    margin-inline-start: -10px;
 }
 
 #treeRoot div img {
-    margin: 0 0 0 -6px;
+    margin: 0;
+    margin-inline-start: -6px;
     vertical-align: middle;
-}
-
-.rtl #treeRoot div img {
-    margin: 0 -6px 0 0;
 }
 
 #floater {
@@ -929,21 +852,17 @@ a img {
     width: 200px;
     padding: 5px;
     top: 25px;
-    left: 4px;
+    inset-inline-start: 4px;
     background: var(--color-surface);
     border: 1px solid var(--color-border-default);
     z-index: 500;
-}
-
-.rtl #floater {
-    right: 4px
 }
 
 .rootNode, .treeNode, .treeNodeHover, .treeNodeSelected, .emptyNode {
     color: var(--color-gray-950);
     cursor: pointer;
     width: auto;
-    margin-right: 0;
+    margin-inline-end: 0;
 }
 
 div.treeNode {
@@ -956,7 +875,7 @@ div.treeNode {
     border: 1px solid var(--color-border-default);
     color: var(--color-gray-950);
     padding: 1px 2px;
-    margin-left: -3px;
+    margin-inline-start: -3px;
 }
 
 .unpublished a, .unpublishedNode {
@@ -990,11 +909,7 @@ div.treeNode {
     width: 10px;
     height: 100%;
     position: absolute;
-    right: -10px;
-}
-
-.rtl #treeSplitter {
-    left: -10px;
+    inset-inline-end: -10px;
 }
 
 .disabledPlugin a {
@@ -1042,7 +957,7 @@ div.treeNode {
 
 .grid img {
     vertical-align: middle;
-    padding-right: 4px;
+    padding-inline-end: 4px;
 }
 
 /* -------------------------[ search bar ]--- */
@@ -1105,17 +1020,19 @@ a.hometblink:hover {
     background-image: url(../common/images/misc/_tx_.gif);
     cursor: pointer;
     color: var(--color-text-primary);
-    padding: 3px 16px 3px 2px;
+    padding: 3px 2px;
+    padding-inline: 16px 2px;
 }
 
 .rtl .cntxMnuItem,
 .rtl .cntxMnuItemDisabled {
-    padding: 3px 2px 3px 16px;
+    padding-inline: 2px 16px;
 }
 
 .cntxMnuItemDisabled {
     cursor: default;
-    padding: 3px 16px 3px 2px;
+    padding: 3px 2px;
+    padding-inline: 16px 2px;
     color: var(--color-gray-950);
 }
 
@@ -1123,22 +1040,18 @@ a.hometblink:hover {
     cursor: pointer;
     color: var(--color-text-primary);
     background: var(--color-context-menu-bg);
-    padding: 2px 15px 2px 1px;
+    padding: 2px 1px;
+    padding-inline: 15px 1px;
     border: 1px solid var(--color-context-menu-border);
 }
 
 .rtl .cntxMnuItemOver {
-    padding: 2px 1px 2px 15px;
+    padding-inline: 1px 15px;
 }
 
 .cntxMnuItem img, .cntxMnuItemOver img, .cntxMnuItemDisabled img {
-    margin: 0 8px 0 0;
-}
-
-.rtl .cntxMnuItem img,
-.rtl .cntxMnuItemOver img,
-.rtl .cntxMnuItemDisabled img {
-    margin: 0 0 0 8px;
+    margin: 0;
+    margin-inline-end: 8px;
 }
 
 .cntxMnuItem img, .cntxMnuItemDisabled img {
@@ -1150,11 +1063,8 @@ a.hometblink:hover {
     height: 1px;
     background-color: var(--color-context-menu-separator);
     overflow: hidden;
-    margin: 3px 1px 3px 28px;
-}
-
-.rtl .cntxMnuSeparator {
-    margin: 3px 28px 3px 1px;
+    margin: 3px 1px;
+    margin-inline-start: 28px;
 }
 
 /* -------------------------[ Top Navbar of snap in top menu bar layout ]--- */
@@ -1214,13 +1124,9 @@ a.hometblink:hover {
 
 .settings th {
     width: 200px !important;
-    text-align: left;
+    text-align: start;
     color: var(--color-gray-700);
     font-size: 1.2em;
-}
-
-.rtl .settings th {
-    text-align: right;
 }
 
 .filelist td {
@@ -1251,12 +1157,6 @@ a.hometblink:hover {
     border: 1px solid var(--color-secondary-border);
     border-radius: 5px 5px 0 0;
     background-color: var(--color-secondary-start);
-}
-
-.rtl .dynamic-tab-pane-control .tab-row .tab {
-    margin: 3px 5px 1px -3px;
-    float: right;
-    padding: 2px 15px 3px;
 }
 
 .dynamic-tab-pane-control .tab-row .tab.hover {
@@ -1333,14 +1233,12 @@ a.hometblink:hover {
 }
 
 .dynamic-tab-pane-control ul {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-inline: 10px;
     padding-bottom: 5px;
 }
 
 .dynamic-tab-pane-control li {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-inline: 5px;
 }
 
 /* -------------------------[ Tree buttons ]--- */
@@ -1377,14 +1275,11 @@ a.hometblink, a.hometblink img {
 }
 
 .wm_button {
-    float: left;
-    margin: 0 12px 2px 0;
+    float: inline-start;
+    margin: 0;
+    margin-inline-end: 12px;
+    margin-bottom: 2px;
     text-align: center;
-}
-
-.rtl .wm_button {
-    float: right;
-    margin: 0 5px 2px 6px;
 }
 
 /* -------------------------[ Welcome Page ]--- */
@@ -1420,13 +1315,9 @@ table.sortabletable {
 }
 
 .sortabletable th {
-    text-align: left;
+    text-align: start;
     cursor: pointer;
     color: var(--color-text-primary);
-}
-
-.rtl .sortabletable th {
-    text-align: right;
 }
 
 .sortabletable th a {
@@ -1437,10 +1328,6 @@ table.sortabletable {
 .sortabletable th:active {
     background: var(--color-border-default);
     padding: 3px 4px 1px 6px;
-}
-
-.rtl .sortabletable th:active {
-    padding: 3px 6px 1px 4px;
 }
 
 /* -------------------------[ Pagination table ]--- */
@@ -1514,11 +1401,6 @@ select#stay {
     padding: var(--space-sm);
 }
 
-.rtl #actions {
-    left: 10px;
-    text-align: left;
-}
-
 .actionButtons {
     margin-bottom: 15px;
 }
@@ -1545,9 +1427,9 @@ ul.actionButtons {
 
 .actionButtons li {
     list-style: none;
-    margin-right: 6px;
+    margin-inline-end: 6px;
     padding: 0;
-    float: left;
+    float: inline-start;
 }
 
 .actionButtons img {
@@ -1562,7 +1444,7 @@ ul.actionButtons {
 
 .actionButtons a {
     display: block;
-    float: left;
+    float: inline-start;
     border-radius: var(--space-xs);
     color: var(--color-gray-800);
     font-size: 1em;
@@ -1604,7 +1486,7 @@ ul.actionButtons {
 
 .actionButtons select, .actionButtons span.and {
     display: block;
-    float: left;
+    float: inline-start;
 }
 
 .actionButtons span.and {
@@ -1661,14 +1543,14 @@ form#mutate dt label,
 form#mutate dt h3.label {
     font-size: 1em;
     display: inline;
-    float: left;
+    float: inline-start;
     width: 200px;
     color: var(--color-error) !important;
     font-weight: bold;
 }
 
 form#mutate dd {
-    margin-left: 210px;
+    margin-inline-start: 210px;
 }
 
 form#mutate input.disabled {
@@ -1708,7 +1590,7 @@ form#mutate textarea.tv_textarea {
 */
 form#mutate input.date,
 form#mutate input.tvdate {
-    margin-right: 10px;
+    margin-inline-end: 10px;
 }
 
 /*
@@ -1738,12 +1620,12 @@ form#mutate fieldset#meta_keywords select.inputBox {
 }
 
 form#mutate fieldset#meta_keywords dl.keywords {
-    float: left;
-    margin-right: 30px;
+    float: inline-start;
+    margin-inline-end: 30px;
 }
 
 form#mutate fieldset#meta_keywords dl.metatags {
-    float: left;
+    float: inline-start;
 }
 
 form#mutate fieldset#meta_keywords dl dt label {
@@ -1751,7 +1633,7 @@ form#mutate fieldset#meta_keywords dl dt label {
 }
 
 form#mutate fieldset#meta_keywords dl dd {
-    margin-left: 110px;
+    margin-inline-start: 110px;
 }
 
 /*
@@ -1772,7 +1654,7 @@ fieldset#access_permissions dt label {
 }
 
 fieldset#access_permissions dd {
-    margin-left: 210px;
+    margin-inline-start: 210px;
 }
 
 fieldset#access_permissions dl dd ul li {
@@ -1863,8 +1745,7 @@ strong[style*='color:#EF1D1D'] {
 #nav > li > ul.subnav {
     display: none;
     position: absolute;
-    left: 0;
-    right: 0;
+    inset-inline: 0;
     margin: var(--radius-md) 0 0 0;
     list-style: none;
     padding: var(--radius-md) var(--subnav-horizontal-padding);
@@ -2160,7 +2041,7 @@ div.treeframebody {
 }
 
 #mx_contextmenu #nameHolder {
-    text-align: left;
+    text-align: start;
     cursor: default;
     font-weight: bold;
     padding: var(--radius-md) var(--space-xs);
@@ -2169,10 +2050,6 @@ div.treeframebody {
     border-bottom: 1px solid var(--clean-border);
     color: var(--light-text-primary);
     text-shadow: none;
-}
-
-.rtl #mx_contextmenu #nameHolder {
-    text-align: right;
 }
 
 #mx_contextmenu .menuLink {
@@ -2184,10 +2061,6 @@ div.treeframebody {
     color: var(--color-tree-published);
 }
 
-.rtl #mx_contextmenu .menuLink {
-    padding: 3px 2px 3px 16px;
-}
-
 #mx_contextmenu .menuLink:hover {
     cursor: pointer;
     padding: 2px var(--space-xs) 2px 3px;
@@ -2196,30 +2069,16 @@ div.treeframebody {
     color: var(--color-text-primary);
 }
 
-.rtl #mx_contextmenu .menuLink:hover {
-    padding: 2px 1px 2px 15px;
-}
-
 #mx_contextmenu .menuLinkDisabled {
     cursor: default;
     padding: 2px var(--space-xs) 2px 3px;
     color: var(--color-gray-600);
 }
 
-.rtl #mx_contextmenu .menuLinkDisabled {
-    padding: 2px 1px 2px 15px;
-}
-
 #mx_contextmenu .menuLink img,
 #mx_contextmenu .menuLink:hover img,
 #mx_contextmenu .menuLinkDisabled img {
-    margin-right: 5px;
-}
-
-.rtl #mx_contextmenu .menuLink img,
-.rtl #mx_contextmenu .menuLink:hover img,
-.rtl #mx_contextmenu .menuLinkDisabled img {
-    margin-right: 8px;
+    margin-inline-end: 5px;
 }
 
 #mx_contextmenu .menuLink img,
@@ -2239,7 +2098,5 @@ div.treeframebody {
     margin: 3px 1px 3px 28px;
 }
 
-.rtl #mx_contextmenu .seperator {
-    margin: 3px 28px 3px 1px;
-}
+
 
